feat: edit and create alert model

--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -1,5 +1,40 @@
 {
     "common": {
         "appTitle": "Mes Alarmes"
-    }
+    },
+    "requesting_notification_permission": "Demande d'autorisation de notification...",
+    "notification_permission_granted": "Autorisation de notification accordée.",
+    "notification_permission_denied": "Autorisation de notification non accordée.",
+    "requesting_external_storage_permission": "Demande d'autorisation pour le stockage externe...",
+    "external_storage_permission_granted": "Autorisation de stockage externe accordée.",
+    "external_storage_permission_denied": "Autorisation de stockage externe non accordée.",
+    "schedule_exact_alarm_permission_status": "Autorisation pour les alarmes exactes : {status}.",
+    "requesting_schedule_exact_alarm_permission": "Demande d'autorisation pour les alarmes exactes...",
+    "schedule_exact_alarm_permission_granted": "Autorisation pour les alarmes exactes accordée.",
+    "schedule_exact_alarm_permission_denied": "Autorisation pour les alarmes exactes non accordée.",
+    "noAlarmSet": "Aucune alarme enregistrée",
+    "alarmStop": "Arreter",
+    "alarmSnooze": "Reporter",
+    "alarmTitle": "Votre Alarme",
+    "alarmDescription": "Il est l'heure de se réveiller!",
+    "cancel": "Annuler",
+    "save": "Sauvegarder",
+    "repeat_on": "Répéter sur :",
+    "repeat_every": "Répéter toutes les :",
+    "x_weeks": "toutes les {weeks} semaine(s)",
+    "loop_audio": "Boucler l'audio",
+    "vibrate": "Vibrer",
+    "alarm_notification_title": "Alarme",
+    "alarm_notification_body": "Votre alarme ({id}) sonne",
+    "stop_alarm_button": "Arrêter l'alarme",
+    "day_1": "L",
+    "day_2": "M",
+    "day_3": "M",
+    "day_4": "J",
+    "day_5": "V",
+    "day_6": "S",
+    "day_7": "D",
+    "create_alarm": "Création de l'alarme",
+    "edit_alarm": "Edition de l'alarme",
+    "delete_alarm": "Supprimer l'alarme"
 }
