--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -21,9 +21,11 @@
     "save": "Sauvegarder",
     "repeat_on": "Répéter sur :",
     "repeat_every": "Répéter toutes les :",
-    "x_weeks": "toutes les {weeks} semaine(s)",
+    "repeat_every_week": "Toute les semaines",
+    "x_weeks": "1 semaine sur {weeks}",
     "loop_audio": "Boucler l'audio",
     "vibrate": "Vibrer",
+    "select_audio": "Sélectionner la musique",
     "alarm_notification_title": "Alarme",
     "alarm_notification_body": "Votre alarme ({id}) sonne",
     "stop_alarm_button": "Arrêter l'alarme",
