feat: style edit

--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -19,12 +19,15 @@
     "alarmDescription": "Il est l'heure de se réveiller!",
     "cancel": "Annuler",
     "save": "Sauvegarder",
+    "show_more": "Afficher plus de paramètres",
+    "show_less": "Cacher les paramètres",
     "repeat_on": "Répéter sur :",
     "repeat_every": "Répéter toutes les :",
     "repeat_every_week": "Toute les semaines",
     "x_weeks": "1 semaine sur {weeks}",
     "loop_audio": "Boucler l'audio",
     "vibrate": "Vibrer",
+    "volume": "Volume",
     "select_audio": "Sélectionner la musique",
     "alarm_notification_title": "Alarme",
     "alarm_notification_body": "Votre alarme ({id}) sonne",
