feat: icon and splash screen

--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -4,33 +4,33 @@
     },
     "requesting_notification_permission": "Demande d'autorisation de notification...",
     "notification_permission_granted": "Autorisation de notification accordée.",
-    "notification_permission_denied": "Autorisation de notification non accordée.",
+    "notification_permission_denied": "Autorisation de notification refusée.",
     "requesting_external_storage_permission": "Demande d'autorisation pour le stockage externe...",
     "external_storage_permission_granted": "Autorisation de stockage externe accordée.",
-    "external_storage_permission_denied": "Autorisation de stockage externe non accordée.",
+    "external_storage_permission_denied": "Autorisation de stockage externe refusée.",
     "schedule_exact_alarm_permission_status": "Autorisation pour les alarmes exactes : {status}.",
     "requesting_schedule_exact_alarm_permission": "Demande d'autorisation pour les alarmes exactes...",
     "schedule_exact_alarm_permission_granted": "Autorisation pour les alarmes exactes accordée.",
-    "schedule_exact_alarm_permission_denied": "Autorisation pour les alarmes exactes non accordée.",
-    "noAlarmSet": "Aucune alarme enregistrée",
-    "alarmStop": "Arreter",
+    "schedule_exact_alarm_permission_denied": "Autorisation pour les alarmes exactes refusée.",
+    "noAlarmSet": "Aucune alarme enregistrée.",
+    "alarmStop": "Arrêter",
     "alarmSnooze": "Reporter",
     "alarmTitle": "Votre Alarme",
-    "alarmDescription": "Il est l'heure de se réveiller!",
+    "alarmDescription": "Il est l'heure de se réveiller !",
     "cancel": "Annuler",
     "save": "Sauvegarder",
     "show_more": "Afficher plus de paramètres",
     "show_less": "Cacher les paramètres",
-    "repeat_on": "Répéter sur :",
+    "repeat_on": "Répéter :",
     "repeat_every": "Répéter toutes les :",
-    "repeat_every_week": "Toute les semaines",
+    "repeat_every_week": "Toutes les semaines",
     "x_weeks": "1 semaine sur {weeks}",
     "loop_audio": "Boucler l'audio",
     "vibrate": "Vibrer",
     "volume": "Volume",
     "select_audio": "Sélectionner la musique",
     "alarm_notification_title": "Alarme",
-    "alarm_notification_body": "Votre alarme ({id}) sonne",
+    "alarm_notification_body": "Votre alarme sonne.",
     "stop_alarm_button": "Arrêter l'alarme",
     "day_1": "L",
     "day_2": "M",
@@ -40,6 +40,6 @@
     "day_6": "S",
     "day_7": "D",
     "create_alarm": "Création de l'alarme",
-    "edit_alarm": "Edition de l'alarme",
+    "edit_alarm": "Édition de l'alarme",
     "delete_alarm": "Supprimer l'alarme"
 }
