feat: add alarm title on ring screen

--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -15,7 +15,6 @@
     "noAlarmSet": "Aucune alarme enregistrée.",
     "alarmStop": "Arrêter",
     "alarmSnooze": "Reporter",
-    "alarmTitle": "Votre Alarme",
     "alarmDescription": "Il est l'heure de se réveiller !",
     "cancel": "Annuler",
     "save": "Sauvegarder",
@@ -30,7 +29,7 @@
     "volume": "Volume",
     "alarm_title": "Titre",
     "select_audio": "Sélectionner la musique",
-    "alarm_notification_title": "Alarme",
+    "alarm_notification_title": "Votre Alarme",
     "alarm_notification_body": "Votre alarme sonne.",
     "stop_alarm_button": "Arrêter l'alarme",
     "day_1": "L",
