feat(alarm): created For

--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -30,7 +30,7 @@
     "vibrate": "Vibrer",
     "volume": "Volume",
     "alarm_title": "Titre",
-    "alarm_createdFor": "A partir de : ",
+    "alarm_createdFor": "A partir du : ",
     "select_audio": "Sélectionner la musique",
     "alarm_notification_title": "Votre Alarme",
     "alarm_notification_body": "Votre alarme sonne.",
