feat(Project): WeekUp app name

--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -1,6 +1,6 @@
 {
     "common": {
-        "appTitle": "Mes Alarmes",
+        "appTitle": "WeekUp",
         "date": "Date",
         "day": "jour",
         "days": "jours",
