--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -59,7 +59,7 @@
     "snooze_alarm": "Votre alarme sonnera à nouveau dans 10 minutes.",
     "nextDateTitle": "Prochaine alarme",
     "nextDateToast": "Prochaine alarme prévue dans",
-    "snooze_explainer": "Cette alarme est un rappel différé. Il sonnera une seule fois à l'heure indiquée.",
+    "snooze_explainer": "Cette alarme est un rappel différé. Elle sonnera une seule fois à l'heure indiquée.",
     "cancel_snooze": "Annuler le rappel différé",
     "snooze_canceled": "Rappel différé a été annulé.",
     "snooze_limit_reached": "Limite de rappel différé atteint (3). Impossible de créer un nouveau rappel différé."
